<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecAvatarCamara"
        android:drawableLeft="@drawable/ic_camara"
        android:id="@+id/butAvCamara"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecAvatarGaleria"
        android:drawableLeft="@drawable/ic_galeria"
        android:id="@+id/butAvGaleria"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecAvatardefault"
        android:id="@+id/butAvDefault"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecAvatarCancel"
        android:id="@+id/butAvCancel"/>

</LinearLayout>