<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="trabajo.sdm.dixit.Activities.MainActivity">

    <Button
        android:id="@+id/bPlayer"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background_2"
        android:drawableLeft="@drawable/ic_jugador"
        android:onClick="onClick"
        android:text="@string/Player"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bOnline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bOnline"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background_2"
        android:drawableLeft="@drawable/ic_multijugador"
        android:onClick="onClick"
        android:text="@string/Online"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bPlayer" />

    <Button
        android:id="@+id/bScores"
        android:layout_width="301dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background_2"
        android:drawableLeft="@drawable/ic_puntos"
        android:onClick="onClick"
        android:text="@string/Scores"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bOnline" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:text="@string/Settings"
        android:drawableLeft="@drawable/ic_config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bInstructions" />

    <Button
        android:id="@+id/bInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@drawable/ic_reglas"
        android:onClick="onClick"
        android:text="@string/Instructions"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="@+id/bCards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bScores" />

    <Button
        android:id="@+id/bCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:drawableLeft="@drawable/ic_carta"
        android:onClick="onClick"
        android:text="@string/Cards"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bInstructions"
        app:layout_constraintTop_toBottomOf="@+id/bScores"
        app:layout_constraintVertical_bias="0.517"
        android:layout_marginRight="8dp" />
</android.support.constraint.ConstraintLayout>
